# rust-3d-cube

./: Cargo.toml  main.rs
