[package]
name = "rust-3d-cube"
version = "0.1.0"
authors = ["Joanna Kang <jfrences11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d= "0.33.0"
nalgebra     = "0.29"
env_logger = "0.9"
rand = "0.8.5"

[[bin]]
name = "rust-3d-cube"
path = "main.rs"
